# mmgplugin

./: .gitignore  CMakeLists.txt  Makefile  MmgPlugDialog.ui  MmgsPlugDialog.ui  MyPlugDialog.ui  README.md  ViewText.py  ViewText.ui  __init__.py  compute_values.py  mmgPlug_plugin.py  mmgsPlug_plugin.py  myMmgPlugDialog.py  myMmgsPlugDialog.py  myViewText.py
misc/: README.md
misc/mesh_data/: MakeMesh.py  Makefile
misc/mesh_data/archive_meshes/: cone_medium.py  cube.mesh  cube.py  cylinder.mesh  cylinder.py  head.mesh  head.o.sol  head_merged.mesh  intersection_sphere_cube.mesh  medium_large_sphere.mesh  medium_large_sphere.py  medium_medium_sphere.mesh  medium_medium_sphere.py  medium_small_sphere.mesh  medium_small_sphere.py  medium_sphere.mesh  medium_sphere.py  ovni.mesh  pipe_big.mesh  pipe_big.py  small_sphere.mesh  small_sphere.py  sphere.mesh  sphere.py  structure.mesh  tiny_sphere.mesh  tiny_sphere.py  torus_medium.mesh  torus_medium.py  torus_small.mesh  torus_small.o.sol  torus_small.py  union_cube_cone_double_nodes.mesh
misc/mesh_data/study_meshes/: cone_medium.mesh  cube.mesh  human.mesh
misc/src/: analysis.py  analysisLists.py  launch.sh  listsLogs.py  main.py  misc.py  my_gnuplot.py  plotter.py
misc/src/loggerpy/: loggingMld.py
misc/src/loggerpy/test/: test_310_loggingMld.py
tests/: MakeMesh.py  Makefile  README.md  gen.sh  launch.sh  tests.py  tests_2D.py  tests_3D.py  tests_3DS.py  testsuite.json  testsuite.yaml  testsuite_2D.json  testsuite_3D.json  testsuite_3DS.json
tests/2D/: disk_flat.mesh
tests/3D/: volume.mesh
tests/surface/: cone_medium.mesh  cube.mesh  cylinder.mesh  fixed_union.mesh  intersection_sphere_cube_MMG_1.med  mechanical.meshb  new_thinker.mesh  small_cut_union_sphere_cube.mesh  small_cut_union_sphere_cube_repaired.meshb  small_sphere.mesh  sphere.mesh  tiny_sphere.med  tiny_sphere.mesh  tiny_sphere.unv  tiny_sphere_MMG_1.cgns  torus_medium.mesh  torus_small.mesh  union_cube_torus.mesh
